WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
165947
Cloned CachedResource should not have an empty response
https://bugs.webkit.org/show_bug.cgi?id=165947
Summary
Cloned CachedResource should not have an empty response
youenn fablet
Reported
2016-12-16 02:39:13 PST
This causes issues at least for CSS stylesheets as they are loosing the response URL. This then introduces the issue that cloned stylesheets are considered as inlined. This is related to
radar://29674114
Attachments
Patch
(7.15 KB, patch)
2016-12-16 06:02 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(7.25 KB, patch)
2016-12-16 06:06 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2016-12-16 06:02:14 PST
Created
attachment 297313
[details]
Patch
youenn fablet
Comment 2
2016-12-16 06:06:41 PST
Created
attachment 297314
[details]
Patch
WebKit Commit Bot
Comment 3
2016-12-17 02:33:50 PST
Comment on
attachment 297314
[details]
Patch Clearing flags on attachment: 297314 Committed
r209961
: <
http://trac.webkit.org/changeset/209961
>
WebKit Commit Bot
Comment 4
2016-12-17 02:33:54 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug