LayoutTests/http/tests/loading/resources/imported-stylesheet-varying-according-domain.css.php
@@ -1,0 +1,7 @@
+<?php
+header("Access-Control-Allow-Origin: *");
+
+$color = $_SERVER['HTTP_HOST'] === $_GET['domain'] ? "green" : "red";
+header("Content-Type: text/css");
+echo("body { background-color: " . $color . ";}");
+?>
